--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "python-probabilities"
-version = "0.1.0"
-description = ""
+version = "0.1.3"
+description = "Library for accurate statistical calculations using Python."
 authors = ["berkay-yalin <66202981+berkay-yalin@users.noreply.github.com>"]
 readme = "README.md"
 packages = [{include = "python_probabilities"}]
