--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,15 @@ packages = [{include = "python_probabilities"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^2.17.2"
+pyright = "^1.1.301"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pyright]
+pythonVersion = "3.9"
+pythonPlatform = "Linux"
+typeCheckingMode = "strict"
