chore: set up devcontainer
• set up devcontainer
• configure hatch development environment
• configure pyright & pylint
• update settings.json & extensions.json

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,9 @@
 {
     "recommendations": [
         "ms-python.python",
+        "ms-python.pylint",
         "ms-pyright.pyright",
-        "bungcip.better-toml",
-        "bierner.markdown-preview-github-styles",
+        "tamasfe.even-better-toml",
+        "bierner.markdown-preview-github-styles"
     ]
 }
