--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,13 @@
 {
+    "files.exclude": {
+        "**/__pycache__/**": true
+    },
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.detectIndentation": false,
-
-    "python.defaultInterpreterPath": ".venv/bin/python",
+    "python.defaultInterpreterPath": "./.hatch/bin/python",
+    "python.terminal.activateEnvironment": false,
     "python.languageServer": "Jedi",
     "python.analysis.diagnosticMode": "workspace",
-
-    "python.linting.pylintEnabled": true,
-    "python.linting.pylintArgs": [
-        "--disable=C0103", // invalid-name
-        "--disable=C0114", // missing-module-docstring
-        "--disable=C0116", // missing-function-docstring
-    ],
+    "pyright.openFilesOnly": false,
 }
